--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <main>
     <h1>Guess which hand 🍬</h1>
-    <h2><em>click on my paw ! (beta version DESKTOP ONLY)</em></h2>
+    <h2>Click on my paw 🐾 and test your luck !</h2>
     <div id="character">
 
         <div id="hands" class="hands">
@@ -21,7 +21,7 @@
         </div>
         <div id="dogImg" class="imageStatic"></div>
         <p id="printResult" class="hide">''</p>
-        <p id="explanation" class="hide">''</p><span id="printCounter" class="hide">''</span>
+        <p id="explanation"><span class="explanation hide">''</span> <span id="printCounter" class="hide"><strong>''</strong></span></p>
     </div>
 
 </main>
