--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <main>
-    <h1>Guess which hand 🍬</h1>
+    <h1>Guess which hand <img id="titleImg" src="img/candy_right.png"</h1>
     <h2>Click on my paw 🐾 and test your luck !</h2>
     <div id="character">
 
