--- a/index.html
+++ b/index.html
@@ -17,28 +17,27 @@
 </head>
 <body>
 <main>
-    <h1>In which paw <img id="titleImg" src="img/candy_right.png"> ?</h1>
+    <h1>I have candies <img id="titleImg" src="img/candy_right.png"> !</h1>
     <span class="instruction">Click on my paw 🐾 and test your luck !</span>
 
     <div class="container-fluid">
 
         <div class="row align-items-center">
 
-            <div class="col-sm-3 col-xs-12 text-sm-right order-sm-1">
+            <div class="col-lg-3 col-xs-12 text-lg-right order-lg-1">
                 <p id="numberTries" class="hide">
                     <span>Tries : </span>
                     <span id="clickCount"><strong>''</strong></span>
                 </p>
             </div>
 
-            <div class="col-sm-3 col-xs-12 text-sm-left text-xs-center order-sm-3 ">
+            <div class="col-lg-3 col-xs-12 text-lg-left text-xs-center order-lg-3 ">
                 <p id="numberCandies" class="hide">
                     <span>Candies : </span>
                     <span id="candyCount"><strong>''</strong></span>
                 </p>
             </div>
-
-            <div class="col-sm-6 col-xs-12 align-items-top order-sm-2">
+            <div class="col-lg-6 col-xs-12 align-items-top order-lg-2">
 
                 <div id="character">
                     <div id="hands" class="hands">
@@ -49,8 +48,7 @@
                     <div id="dogImg" class="imageStatic"></div>
 
                     <p id="printResult" class="hide">''</p>
-                    <p id="explanation"><span class="explanation hide">''</span> <span id="printCounter"
-                                                                                       class="hide"><strong>''</strong></span>
+                    <p id="explanation"><span class="explanation hide">''</span> <span id="printCounter" class="hide"><strong>''</strong></span>
                     </p>
                 </div>
             </div>
