--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <main>
-    <h1>I have candies <img id="titleImg" src="img/candy_right.png"> !</h1>
+    <h1>I have candies <img id="titleImg" src="img/candy_right.png"></h1>
     <span class="instruction">Click on my paw 🐾 and test your luck !</span>
 
     <div class="container-fluid">
