--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess Which Hand game</title>
+    <title>I Have Candies game by Mariia Kaptur</title>
     <link href="https://fonts.googleapis.com/css?family=Quando|Mallanna" rel="stylesheet">
 
     <!--Bootstrap CSS-->
